# Quantum-Language

./: .ai-ingested  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  GITHUB_LANGUAGE_SUPPORT.md  Makefile  README.md  build.bat  build_errors.txt  build_log.txt  install.sh  install_windows.bat  output.txt  qrun.bat  quantum.bat  quantum_bin  run_quantum.bat  test_c.sa  test_destruct.sa  test_results.txt  try_compile.bat  update-submodules.js
.github/: linguist.yml
build_ninja/: CMakeCache.txt
docs/: SECURITY.md
docs/code-explanation/: Token_h.md
docs/design/: AST_h.md  Error_h.md  Interpreter.md  Interpreter_h.md  Lexer.md  Lexer_h.md  Parser.md  Parser_h.md  README.md  STRUCTURE.md  Token.md  Token_h.md  Value.md  Value_h.md  main.md
examples/: advanced.sa  demo.sa  features.sa  hello.sa
examples/C/: GuessGame.sa
examples/Python/: Functions.sa  GuessGame.sa  Python.sa  oop_classes.sa
extensions/: README.md  language-configuration.json  package-lock.json  package.json  quantum-language-1.0.0.vsix  quantum-language-1.1.0.vsix
extensions/quantum-language/: .vscodeignore  LICENSE.md  README.md  extension.js  package-lock.json  package.json  quantum-language-0.0.1.vsix
extensions/quantum-language/syntaxes/: quantum.tmLanguage.json
extensions/snippets/: quantum.json
extensions/src/: extension.ts
extensions/syntaxes/: quantum.tmlanguage.json
include/: AST.h  Error.h  Interpreter.h  Lexer.h  Parser.h  Token.h  Value.h  Vm.h
src/: Compiler.cpp  Disassembler.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Value.cpp  Vm.cpp  main.cpp
testing/: quantum_cybersecurity_suite copy 4.sa
